--- a/daily_life/public/css/style.css
+++ b/daily_life/public/css/style.css
@@ -1,237 +1,459 @@
 @charset "utf-8";
 
 /* リセットCSS */
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
 
 body {
-    line-height:1;
+    line-height: 1;
 }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
 
 nav ul {
-    list-style:none;
+    list-style: none;
 }
 
-blockquote, q {
-    quotes:none;
+blockquote,
+q {
+    quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: "";
+    content: none;
 }
 
 a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
 
 /* change colours to suit your needs */
 ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
+    background-color: #ff9;
+    color: #000;
+    text-decoration: none;
 }
 
 /* change colours to suit your needs */
 mark {
-    background-color:#ff9;
-    color:#000;
-    font-style:italic;
-    font-weight:bold;
+    background-color: #ff9;
+    color: #000;
+    font-style: italic;
+    font-weight: bold;
 }
 
 del {
     text-decoration: line-through;
 }
 
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
+abbr[title],
+dfn[title] {
+    border-bottom: 1px dotted;
+    cursor: help;
 }
 
 table {
-    border-collapse:collapse;
-    border-spacing:0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* change border colour to suit your needs */
 hr {
-    display:block;
-    height:1px;
-    border:0;  
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #cccccc;
+    margin: 1em 0;
+    padding: 0;
 }
 
-input, select {
-    vertical-align:middle;
+input,
+select {
+    vertical-align: middle;
 }
 
 /* ここから自分で記述 */
+.body {
+    position: relative;
+    width: 100vw;
+}
+
 .flex {
-  display: flex;
+    display: flex;
+}
+
+.between {
+    justify-content: space-between;
 }
 
 .left {
-  width: 20%;
+    width: 20%;
+    position: fixed;
 }
 
 .right {
-  width: 80%;
+    width: 80%;
+    position: absolute;
+    right: 0;
 }
 
 .main {
-  width: 80%;
-  margin: 0 auto;
+    width: 80%;
+    margin: 0 auto;
+}
+
+button:focus {
+    outline: none;
 }
 
 /* sidenav */
 .sidenav {
-  min-height: 100vh;
-  background-color: #2E2E38;
-  color: #fff;
+    min-height: 100vh;
+    background-color: #2e2e38;
+    color: #fff;
 }
 
 .logo {
-  font-size: 24px;
-  font-weight: bold;
-  text-align: center;
-  padding: 20px 0;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    padding: 20px 0;
 }
 
 .sidenav li {
-  padding: 15px 0;
-  font-size: 20px;
-  width: 80%;
-  margin: 0 auto;
-  text-align: left;
-  list-style: none;
+    padding: 15px 0;
+    font-size: 20px;
+    width: 80%;
+    margin: 0 auto;
+    text-align: left;
+    list-style: none;
 }
 
 .sidenav a {
-  color: #fff;
+    color: #fff;
 }
 
 .sidenav a:hover {
-  color: #fff;
+    color: #fff;
+}
+
+/* flash message */
+.flash_message {
+    font-size: 20px;
+    background-color: #99FF66;
+    color: white;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
 }
 
 /* toDoリスト 一覧 */
 .title {
-  text-align: center;
-  font-weight: bold;
-  margin: 20px 0;
+    font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    margin: 20px 0;
 }
 
-.list-container {
-  margin: 50px 0 20px;
+.create-btn {
+    color: black;
 }
 
-.todo-container,
-.done-container {
-  width: 50%;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
+.create-btn:hover {
+    color: cornflowerblue;
 }
 
 .todo-container {
-  background-color:  #2E2E38;
-  position: relative;
+    width: 100%;
 }
 
-.done-container {
-  border: 1px solid #2E2E38;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 30px 0;
 }
 
-.list-name {
-  font-size: 24px;
+th {
+    border-bottom: 2px solid #0099e4;
+    color: #0099e4;
 }
 
-.todo-plus-icon {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  color: #fff;
+td {
+  border-bottom: 1px solid #ccc;
+}
+
+td:nth-of-type(1)
+,th:nth-of-type(1) {
+    width: 15%;
+}
+
+td:nth-of-type(2)
+,th:nth-of-type(2) {
+    width: 45%;
+}
+
+td:nth-of-type(3)
+,th:nth-of-type(3) {
+    width: 20%;
+}
+
+td:nth-of-type(4)
+,th:nth-of-type(4) {
+    width: 20%;
+    text-align: right;
+}
+
+#check {
+    width: 20px;
+    height: 20px;
+}
+
+.status {
+    display: inline-block;
+    width: 70%;
+    text-align: center;
+    color: white;
+    background-color: #DD0000;
+    border-radius: 20px;
+    padding: 8px 0;
+    margin: 10px 0;
 }
 
 /* card */
 .card {
-  margin: 10px 0;
-}
-
-/* メモ一覧 */
-.memo-top {
-  justify-content: space-between;
-  border-bottom: 1px solid #2E2E38;
-  padding: 10px 0;
-  margin-bottom: 20px;
+    margin: 10px 0;
 }
 
 .card-body {
-  justify-content: space-between;
-  align-items: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
+/* メモ&日記　トップ */
+.top {
+    border-bottom: 1px solid #2e2e38;
+    padding: 10px 0;
+    margin-bottom: 20px;
+}
+
+/* icon */
 .icon-btn {
-  border: none;
-  background-color: #fff;
-  margin: 0 10px;
+    border: none;
+    background-color: #fff;
+    margin: 0 10px;
+}
+
+.edit-btn:hover {
+    color: #00FF3B;
+}
+
+.delete-btn:hover {
+    color: red;
 }
 
 /* メモ新規作成・編集 */
 .form-container {
-  width: 80%;
-  background-color: #eee;
-  margin: 50px auto 0;
+    width: 80%;
+    background-color: #eee;
+    margin: 50px auto 0;
 }
 
 .form {
-  width: 80%;
-  margin: 0 auto;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .item-name {
-  padding: 30px 0;
-  text-align: center;
+    padding: 30px 0;
+    text-align: center;
 }
 
 .btn-container {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 30px;
 }
 
 .back-btn {
-  color: #000;
-  text-decoration: underline;
+    color: #000;
+    text-decoration: underline;
+}
+
+/* memo search */
+.result {
+    margin: 15px 0;
+}
+
+
+/* 一覧へボタン */
+.to-memo-btn,
+.to-post-btn {
+    color: #000;
+}
+
+/* diary */
+/* diary create&edit */
+.diary-title {
+    display: inline-block;
+    width: 100%;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
+}
+
+.diary-content {
+    display: inline-block;
+    width: 100%;
+    border: none;
+    outline: none;
+}
+
+.block {
+    display: block;
+    margin: 5px 0 20px;
+}
+
+/* diary index */
+.div-link {
+    position:relative;
+    width: 100%;
+    border:1px solid #64F9C1;
+}
+
+.div-link:hover {
+    background-color: #CEF9DC;
+}
+
+.link {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.post-date {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.post-title {
+    font-size: 24px;
+}
+
+.post-tag {
+    color: #484848;
+}
+
+/* diary show */
+.show-date {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.show-title {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.show-content {
+    font-size: 20px;
+    margin: 30px 0 50px;
 }
