--- a/daily_life/public/css/style.css
+++ b/daily_life/public/css/style.css
@@ -250,6 +250,10 @@ button:focus {
     margin: 20px 0;
 }
 
+.todo-input {
+    width: 100%;
+}
+
 .create-btn {
     color: black;
 }
@@ -301,6 +305,16 @@ td:nth-of-type(4)
 #check {
     width: 20px;
     height: 20px;
+    cursor: pointer;
+}
+
+.all_check_label,
+#all_check {
+    cursor: pointer;
+}
+
+.all_check_label:hover {
+    text-decoration: underline;
 }
 
 .status {
@@ -456,4 +470,9 @@ td:nth-of-type(4)
 .show-content {
     font-size: 20px;
     margin: 30px 0 50px;
+}
+
+.show-tag {
+    margin-bottom: 50px;
+    color: #484848;
 }
